--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             
             <nav class="nav-links" id="mobile-nav">
                 <a href="#all-semesters">All Semesters</a>
-                <a href="#resources">Resources</a>
-                <a href="#" id="courseListBtn">Course List</a>
+                <a href="#resources">Resources(Softwares & Pdfs)</a>
+                <!-- <a href="#" id="courseListBtn">Course List</a> -->
                 <a href="https://bup.edu.bd/department_home/8" target="_blank">About Dept.</a>
             </nav>
             
