Update resources link to direct to Google Drive for easier access

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             
             <nav class="nav-links" id="mobile-nav">
                 <a href="#all-semesters">All Semesters</a>
-                <a href="#resources">Resources(Softwares & Pdfs)</a>
+                <a href="https://drive.google.com/drive/folders/1rtMMO0iTKQCMBesbmRIVS3COeyEbfsPv?usp=sharing" target="_blank">Resources(Softwares & Pdfs)</a>
                 <!-- <a href="#" id="courseListBtn">Course List</a> -->
                 <a href="https://bup.edu.bd/department_home/8" target="_blank">About Dept.</a>
             </nav>
