Update Section A routine link to point to the correct image path

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </a>
         </div>
         <div style="text-align: center; margin-top: 20px;">
-            <a href="assets/images/3-2 Routine_a.png" target="_blank" class="resource-card" style="display: inline-flex; width: auto; padding: 10px 20px;" id="sectionARoutineBtn">
+            <a href="./assets/images/batch_1/sec_A_batch_1_sem_6.png" target="_blank" class="resource-card" style="display: inline-flex; width: auto; padding: 10px 20px;" id="sectionARoutineBtn">
                 Section A Routine
             </a>
             <a href="assets/images/3-2_Routine_b.png" target="_blank" class="resource-card" style="display: inline-flex; width: auto; padding: 10px 20px; margin-left: 10px;" id="sectionBRoutineBtn">
