--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <a href="./assets/images/batch_1/sec_A_batch_1_sem_6.png" target="_blank" class="resource-card" style="display: inline-flex; width: auto; padding: 10px 20px;" id="sectionARoutineBtn">
                 Section A Routine
             </a>
-            <a href="assets/images/3-2_Routine_b.png" target="_blank" class="resource-card" style="display: inline-flex; width: auto; padding: 10px 20px; margin-left: 10px;" id="sectionBRoutineBtn">
+            <a href="#" target="_blank" class="resource-card" style="display: inline-flex; width: auto; padding: 10px 20px; margin-left: 10px;" id="sectionBRoutineBtn">
                 Section B Routine
             </a>
         </div>
